tests/snapshots/integration_test__strict_errors_on_missing_variable.snap
---
source: tests/integration_test.rs
expression: stderr
---
error: undefined value (in template:1)


---------------------------------- template -----------------------------------
   1 > Hello {{NAME}}!
     i         ^^^^ undefined value
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------
